feature/refactor-bokim : added alt option on img tags

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -32,7 +32,10 @@
     <div class="layout">
       <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
-          ><img src="../assets/42_logo_nav.svg" class="layout-nav-logo"
+          ><img
+            src="../assets/42_logo_nav.svg"
+            class="layout-nav-logo"
+            alt="42 logo"
         /></a>
         <ul class="layout-nav-items">
           <li class="nav-items-icon">
@@ -101,6 +104,7 @@
           <img
             class="header-logo hidden-desktop"
             src="../assets/42_logo_nav.svg"
+            alt="42 logo"
           />
         </a>
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
@@ -164,6 +168,7 @@
             <img
               class="header-content-img hidden-mobile"
               src="../assets/header_chick.jpg"
+              alt="chick photo"
             />
           </div>
         </a>
@@ -329,7 +334,11 @@
             <ul class="content-list">
               <li>아래와 같이 페이지에 출력하세요.</li>
             </ul>
-            <img class="content-img" src="../assets/day00/ex01.png" />
+            <img
+              class="content-img"
+              src="../assets/day00/ex01.png"
+              alt="ex01 example photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -372,7 +381,11 @@
             <ul class="content-list">
               <li>아래와 같이 페이지에 출력하세요.</li>
             </ul>
-            <img class="content-img" src="../assets/day00/ex02.png" />
+            <img
+              class="content-img"
+              src="../assets/day00/ex02.png"
+              alt="ex02 example photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -426,7 +439,11 @@
               <li>Send 클릭 시 입력한 정보가 제출됩니다.</li>
               <li>아래와 같이 페이지에 출력하세요.</li>
             </ul>
-            <img class="content-img" src="../assets/day00/ex03.png" />
+            <img
+              class="content-img"
+              src="../assets/day00/ex03.png"
+              alt="ex03 example photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -470,7 +487,11 @@
               <li>Inline style을 사용하세요.</li>
               <li>아래와 같이 페이지에 출력하세요.</li>
             </ul>
-            <img class="content-img" src="../assets/day00/ex04.png" />
+            <img
+              class="content-img"
+              src="../assets/day00/ex04.png"
+              alt="ex04 example photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -517,7 +538,11 @@
               </li>
               <li>이때, 각각의 페이지는 ex00 ~ ex04의 index.html 입니다.</li>
             </ul>
-            <img class="content-img" src="../assets/day00/ex05.png" />
+            <img
+              class="content-img"
+              src="../assets/day00/ex05.png"
+              alt="ex05 example photo"
+            />
           </section>
         </div>
       </main>
