--- a/pages/day01.html
+++ b/pages/day01.html
@@ -32,7 +32,10 @@
     <div class="layout">
       <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
-          ><img src="../assets/42_logo_nav.svg" class="layout-nav-logo"
+          ><img
+            src="../assets/42_logo_nav.svg"
+            class="layout-nav-logo"
+            alt="42 logo"
         /></a>
         <ul class="layout-nav-items">
           <li class="nav-items-icon">
@@ -101,6 +104,7 @@
           <img
             class="header-logo hidden-desktop"
             src="../assets/42_logo_nav.svg"
+            alt="42 logo"
           />
         </a>
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
@@ -164,6 +168,7 @@
             <img
               class="header-content-img hidden-mobile"
               src="../assets/header_chick.jpg"
+              alt="chick photo"
             />
           </div>
         </a>
@@ -237,6 +242,7 @@
             <img
               class="content-img img-margin"
               src="../assets/day01/majang.jpeg"
+              alt="majang lake photo"
             />
           </section>
 
@@ -315,11 +321,19 @@
               <i class="material-icons-outlined">lightbulb</i>HTML semantic을
               구글링 해보세요.
             </p>
-            <img class="content-img" src="../assets/day01/ex00.png" />
+            <img
+              class="content-img"
+              src="../assets/day01/ex00.png"
+              alt="ex00 example photo"
+            />
             <ul class="content-list">
               <li>Korean을 누르면 언어를 선택할 수 있어요.</li>
             </ul>
-            <img class="content-img" src="../assets/day01/ex00_option.png" />
+            <img
+              class="content-img"
+              src="../assets/day01/ex00_option.png"
+              alt="ex00 example language option photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -375,7 +389,11 @@
               <i class="material-icons-outlined">lightbulb</i>Margin, border,
               padding의 차이는 뭘까요?
             </p>
-            <img class="content-img" src="../assets/day01/ex01.png" />
+            <img
+              class="content-img"
+              src="../assets/day01/ex01.png"
+              alt="ex01 example photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -425,7 +443,11 @@
               </li>
               <li>Forgot password?, Sign Up은 여전히 링크입니다.</li>
             </ul>
-            <img class="content-img" src="../assets/day01/ex02.png" />
+            <img
+              class="content-img"
+              src="../assets/day01/ex02.png"
+              alt="ex02 example photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -476,12 +498,20 @@
               <i class="material-icons-outlined">lightbulb</i>"Form is
               temporary, but class is permanent" - Bill Shankly
             </p>
-            <img class="content-img" src="../assets/day01/ex03.png" />
+            <img
+              class="content-img"
+              src="../assets/day01/ex03.png"
+              alt="ex03 example photo"
+            />
             <p class="content-tip">
               <i class="material-icons-outlined">lightbulb</i>Flexbox를
               사용한다면 창 크기를 줄였을 때 아래와 같이 되겠죠?
             </p>
-            <img class="content-img" src="../assets/day01/ex03_narrow.png" />
+            <img
+              class="content-img"
+              src="../assets/day01/ex03_narrow.png"
+              alt="ex03 photo after narrow icon click"
+            />
           </section>
         </div>
       </main>
