--- a/pages/day02.html
+++ b/pages/day02.html
@@ -32,7 +32,10 @@
     <div class="layout">
       <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
-          ><img src="../assets/42_logo_nav.svg" class="layout-nav-logo"
+          ><img
+            src="../assets/42_logo_nav.svg"
+            class="layout-nav-logo"
+            alt="42 logo"
         /></a>
         <ul class="layout-nav-items">
           <li class="nav-items-icon">
@@ -101,6 +104,7 @@
           <img
             class="header-logo hidden-desktop"
             src="../assets/42_logo_nav.svg"
+            alt="42 logo"
           />
         </a>
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
@@ -164,6 +168,7 @@
             <img
               class="header-content-img hidden-mobile"
               src="../assets/header_chick.jpg"
+              alt="chick photo"
             />
           </div>
         </a>
@@ -284,7 +289,11 @@
                 모든 색깔은 css/color.css에 지정한 변수를 불러 사용해야 합니다.
               </li>
             </ul>
-            <img class="content-img" src="../assets/day02/ex00.png" />
+            <img
+              class="content-img"
+              src="../assets/day02/ex00.png"
+              alt="ex00 photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -334,7 +343,11 @@
               </li>
               <li>다양한 CSS functions를 사용해보세요.</li>
             </ul>
-            <img class="content-img" src="../assets/day02/ex01.png" />
+            <img
+              class="content-img"
+              src="../assets/day02/ex01.png"
+              alt="ex01 photo"
+            />
             <ul class="content-list">
               <li>full screen에서는 아래와 같이 출력됩니다.</li>
             </ul>
@@ -342,7 +355,11 @@
               <i class="material-icons-outlined">lightbulb</i>repeat() &
               minmax()를 검색해보세요.
             </p>
-            <img class="content-img" src="../assets/day02/ex01_full.png" />
+            <img
+              class="content-img"
+              src="../assets/day02/ex01_full.png"
+              alt="ex01 full screen photo"
+            />
           </section>
 
           <hr class="horiz-divider" />
@@ -396,7 +413,11 @@
                 >구글</a
               >이 여러분과 함께합니다.
             </p>
-            <img class="content-img" src="../assets/day02/ex02.png" />
+            <img
+              class="content-img"
+              src="../assets/day02/ex02.png"
+              alt="ex02 photo"
+            />
             <iframe
               class="content-video"
               src="../assets/day02/ex02.mp4"
