--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <div class="layout">
       <nav class="layout-nav hidden-mobile">
         <a href="index.html"
-          ><img src="assets/42_logo_nav.svg" class="layout-nav-logo"
+          ><img
+            src="assets/42_logo_nav.svg"
+            class="layout-nav-logo"
+            alt="42 logo"
         /></a>
         <ul class="layout-nav-items">
           <li class="nav-items-icon">
@@ -107,6 +110,7 @@
           <img
             class="header-logo hidden-desktop"
             src="assets/42_logo_nav.svg"
+            alt="42 logo"
           />
         </a>
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
@@ -170,6 +174,7 @@
             <img
               class="header-content-img hidden-mobile"
               src="assets/header_chick.jpg"
+              alt="chick photo"
             />
           </div>
         </a>
