feature/refactor-ghan : add comments to html and separate css to components

--- a/pages/day01.html
+++ b/pages/day01.html
@@ -30,6 +30,7 @@
 
   <body>
     <div class="layout">
+      <!-- SECTION - DESKTOP NAV BAR -->
       <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
           ><img
@@ -56,6 +57,7 @@
         </ul>
       </nav>
 
+      <!-- SECTION - PROJECTS SUBNAV -->
       <div class="layout-subnav hidden-mobile">
         <div class="subnav-content">
           <ul class="content-fixed-item">
@@ -99,7 +101,9 @@
         </div>
       </div>
 
+      <!-- SECTION - HEADER -->
       <header class="layout-header">
+        mobile">
         <a href="../index.html">
           <img
             class="header-logo hidden-desktop"
@@ -107,6 +111,7 @@
             alt="42 logo"
           />
         </a>
+        <!-- SECTION - MOBILE NAV HIDDEN ON DESKTOP -->
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
@@ -178,6 +183,7 @@
         <div class="content-frame">
           <h2 class="content-head xxxlarge text-bold">DAY01</h2>
 
+          <!-- SECTION - BASIC INSTRUCTION -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Basic Instruction</h3>
             <ul class="content-list">
@@ -231,6 +237,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - FOREWORD -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Foreword</h3>
             <p class="content-para">
@@ -248,6 +255,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - TODAY'S RULE -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Today's Rule</h3>
             <ul class="content-list">
@@ -267,6 +275,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX00 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 00 : HTML is ugly
@@ -338,6 +347,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX01 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 01 : Colorful is Wonderful!
@@ -398,6 +408,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX02 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 02 : Combination pizza is delicious!
@@ -452,6 +463,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX03 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 03 : FLEX! Design smarter!
@@ -516,6 +528,7 @@
         </div>
       </main>
 
+      <!-- SECTION - FOOTER -->
       <footer class="layout-footer">
         <p class="layout-footer-text small">
           credit to
