--- a/pages/day03.html
+++ b/pages/day03.html
@@ -30,6 +30,7 @@
 
   <body>
     <div class="layout">
+      <!-- SECTION - DESKTOP NAV BAR -->
       <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
           ><img
@@ -56,6 +57,7 @@
         </ul>
       </nav>
 
+      <!-- SECTION - PROJECTS SUBNAV -->
       <div class="layout-subnav hidden-mobile">
         <div class="subnav-content">
           <ul class="content-fixed-item">
@@ -99,7 +101,9 @@
         </div>
       </div>
 
+      <!-- SECTION - HEADER -->
       <header class="layout-header">
+        mobile">
         <a href="../index.html">
           <img
             class="header-logo hidden-desktop"
@@ -107,6 +111,7 @@
             alt="42 logo"
           />
         </a>
+        <!-- SECTION - MOBILE NAV HIDDEN ON DESKTOP -->
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
@@ -178,6 +183,7 @@
         <div class="content-frame">
           <h2 class="content-head xxxlarge text-bold">DAY03</h2>
 
+          <!-- SECTION - BASIC INSTRUCTION -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Basic Instruction</h3>
             <ul class="content-list">
@@ -231,6 +237,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - FOREWORD -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Foreword</h3>
             <p class="content-para">
@@ -245,6 +252,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX00 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 00 : The Chaotic Boxes 🤪
@@ -291,6 +299,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX01 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 01 : Flexible Ribbons
@@ -339,6 +348,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - FOREWORD -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 02 : Responsiveness is Responsibility
@@ -390,6 +400,7 @@
         </div>
       </main>
 
+      <!-- SECTION - FOOTER -->
       <footer class="layout-footer">
         <p class="layout-footer-text small">
           credit to
