--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -30,6 +30,7 @@
 
   <body>
     <div class="layout">
+      <!-- SECTION - DESKTOP NAV BAR -->
       <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
           ><img
@@ -98,6 +99,7 @@
         </ul>
       </nav>
 
+      <!-- SECTION - HEADER -->
       <header class="layout-header">
         <a href="../index.html">
           <img
@@ -106,6 +108,7 @@
             alt="42 logo"
           />
         </a>
+        <!-- SECTION - MOBILE NAV HIDDEN ON DESKTOP -->
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
@@ -177,6 +180,7 @@
         <div class="content-frame">
           <h2 class="content-head xxxlarge text-bold">Guideline</h2>
 
+          <!-- SECTION - GENERAL INSTRUCTIONS -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">기본 규칙</h3>
             <ul class="content-list">
@@ -230,6 +234,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - CODING STANDARD -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Coding Standard</h3>
             <h4 class="content-subhead-two large text-bold">HTML Norm</h4>
@@ -342,6 +347,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - 42 HONOR CODE -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">42 서울 Honor Code</h3>
             <p class="content-para large">
@@ -383,6 +389,7 @@
         </div>
       </main>
 
+      <!-- SECTION - FOOTER -->
       <footer class="layout-footer">
         <p class="layout-footer-text small">
           credit to
