--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   </head>
 
   <body>
-    <div class="layout">
+    < class="layout">
+      <!-- SECTION - DESKTOP NAV BAR -->
       <nav class="layout-nav hidden-mobile">
         <a href="index.html"
           ><img
@@ -105,6 +106,7 @@
         </ul>
       </nav>
 
+      <!-- SECTION - HEADER -->
       <header class="layout-header">
         <a href="index.html">
           <img
@@ -113,6 +115,7 @@
             alt="42 logo"
           />
         </a>
+        <!-- SECTION - MOBILE NAV HIDDEN ON DESKTOP -->
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
@@ -182,6 +185,7 @@
 
       <main class="layout-content">
         <div class="content-frame">
+          <!-- SECTION - ABOUT -->
           <h2 class="content-head xxxlarge text-bold">About</h2>
           <img
             class="content-logo"
@@ -233,6 +237,7 @@
         </div>
       </main>
 
+      <!-- SECTION - FOOTER -->
       <footer class="layout-footer">
         <p class="layout-footer-text small">
           credit to
