--- a/pages/day00.html
+++ b/pages/day00.html
@@ -30,6 +30,7 @@
 
   <body>
     <div class="layout">
+      <!-- SECTION - DESKTOP NAV BAR -->
       <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
           ><img
@@ -56,6 +57,7 @@
         </ul>
       </nav>
 
+      <!-- SECTION - PROJECTS SUBNAV -->
       <div class="layout-subnav hidden-mobile">
         <div class="subnav-content">
           <ul class="content-fixed-item">
@@ -99,7 +101,9 @@
         </div>
       </div>
 
+      <!-- SECTION - HEADER -->
       <header class="layout-header">
+        mobile">
         <a href="../index.html">
           <img
             class="header-logo hidden-desktop"
@@ -107,6 +111,7 @@
             alt="42 logo"
           />
         </a>
+        <!-- SECTION - MOBILE NAV HIDDEN ON DESKTOP -->
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
@@ -178,6 +183,7 @@
         <div class="content-frame">
           <h2 class="content-head xxxlarge text-bold">DAY00</h2>
 
+          <!-- SECTION - BASIC INSTRUCTION -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Basic Instruction</h3>
             <ul class="content-list">
@@ -231,6 +237,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - FOREWORD -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Foreword</h3>
             <p class="content-para">
@@ -245,6 +252,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - TODAY'S RULE -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Today's Rule</h3>
             <ul class="content-list">
@@ -256,6 +264,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX00 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 00 : Hello World!
@@ -296,6 +305,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX01 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 01 : Hellooooooo Worldddddddd!!!
@@ -343,6 +353,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX02 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 02 : Chick-to-Chicken
@@ -390,6 +401,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX03 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 03 : Let me introduce myself...
@@ -448,6 +460,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX04 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 04 : Welcome to 42
@@ -496,6 +509,7 @@
 
           <hr class="horiz-divider" />
 
+          <!-- SECTION - EX05 -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">
               Exercise 05 : Beautiful Star
@@ -547,6 +561,7 @@
         </div>
       </main>
 
+      <!-- SECTION - FOOTER -->
       <footer class="layout-footer">
         <p class="layout-footer-text small">
           credit to
