--- a/pages/day05.html
+++ b/pages/day05.html
@@ -30,6 +30,7 @@
 
   <body>
     <div class="layout">
+      <!-- SECTION - DESKTOP NAV BAR -->
       <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
           ><img
@@ -56,6 +57,7 @@
         </ul>
       </nav>
 
+      <!-- SECTION - PROJECTS SUBNAV -->
       <div class="layout-subnav hidden-mobile">
         <div class="subnav-content">
           <ul class="content-fixed-item">
@@ -99,7 +101,9 @@
         </div>
       </div>
 
+      <!-- SECTION - HEADER -->
       <header class="layout-header">
+        mobile">
         <a href="../index.html">
           <img
             class="header-logo hidden-desktop"
@@ -107,6 +111,7 @@
             alt="42 logo"
           />
         </a>
+        <!-- SECTION - MOBILE NAV HIDDEN ON DESKTOP -->
         <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
@@ -178,6 +183,7 @@
         <div class="content-frame"></div>
       </main>
 
+      <!-- SECTION - FOOTER -->
       <footer class="layout-footer">
         <p class="layout-footer-text small">
           credit to
