feature/refactor-ghan : fix html errors

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
 
   <body>
-    < class="layout">
+    <div class="layout">
       <!-- SECTION - DESKTOP NAV BAR -->
       <nav class="layout-nav hidden-mobile">
         <a href="index.html"
