feature/refactor-ghan : use chrome rule added to basic instructions

--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -196,6 +196,7 @@
                 난이도가 더 높은 문제는 아무리 잘 완료했다 하더라도 평가에
                 반영되지 않습니다.
               </li>
+              <li>모든 프로젝트는 Chrome 브라우저 기반으로 평가됩니다.</li>
               <li>
                 모든 HTML 파일은
                 <a
