--- a/pages/day04.html
+++ b/pages/day04.html
@@ -184,7 +184,7 @@
 
           <!-- SECTION - BASIC INSTRUCTION -->
           <section class="content-section">
-            <h3 class="content-subhead xlarge text-bold">Basic Instruction</h3>
+            <h3 class="content-subhead xlarge text-bold">Basic Instructions</h3>
             <ul class="content-list">
               <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
               <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
