feature/coding_std : google style guide added

--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -256,94 +256,33 @@
               <li>Block별로 CSS file을 만들어야 합니다.</li>
               <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
               <li>CSS file은 100줄을 넘지 않아야 합니다.</li>
-              <li>
-                모든 block에 적용되는 스타일의 경우 reset.css/layout.css에
-                명시하여야 합니다.
-              </li>
-              <li>CSS 방법론인 BEM 따라야 합니다.</li>
             </ul>
-            <h4 class="content-subhead-two large text-bold">BEM</h4>
-            <p class="content-para">
-              BEM은 기본적으로 id와 CSS tag가 아닌 class만 사용해야 합니다.
-            </p>
-            <pre><code class="content-code"
-              ><p class="code-line text-bold">.class #test_id { ... } ❌</p>
-              <p class="code-line text-bold">.class div { ... } ❌</p>
-              <p class="code-line text-bold">.class-test {... } 👌</p></code
-            ></pre>
-            <h5 class="content-subhead-three text-bold">Block</h5>
+            <h4 class="content-subhead-two large text-bold">
+              Google HTML/CSS Style Guide
+            </h4>
             <ul class="content-list">
+              <li>Google이 제공해주는 style guide 입니다.</li>
               <li>
-                block은 문단 전체에 적용된 element 또는 element를 담고 있는
-                컨테이너를 말합니다. ex) logo / login form / menu / search from
-                / content / footer
+                이 문서는 따로 명시 되어있지 않는 한 평가에 영향을 미치지
+                않습니다.
               </li>
-            </ul>
-            <pre><code class="content-code"
-            ><p class="code-line text-bold">&lt;div class="header"&gt;</p>
-            <p class="code-line text-bold">&nbsp;&nbsp;&lt;div class="menu"&gt;....&lt;/div&gt;</p>
-            <p class="code-line text-bold">&nbsp;&nbsp;&lt;div class="search"&gt;....&lt;/div&gt;</p>
-            <p class="code-line text-bold">&lt;div&gt;</p>
-          </code></pre>
-            <h5 class="content-subhead-three text-bold">Element</h5>
-            <ul class="content-list">
               <li>
-                element는 block 안에서 특정 기능을 수행하는 컴포넌트 입니다.
-                element는 상황에 따라 달라집니다. 각 element는 두 개의
-                밑줄표시로 연결하여 block 다음에 작성합니다.
+                효율적이고 깔끔한 코드를 쓰고싶다면 최대한 이 문서에서 요구하는
+                사항들을 지키며 코드를 작성하세요.
+              </li>
+              <li>
+                원문:
+                <a
+                  class="text-bold text-underline"
+                  href="https://google.github.io/styleguide/htmlcssguide.html"
+                  >Google HTML/CSS Style Guide</a
+                >
               </li>
             </ul>
-            <pre><code class="content-code"
-            ><p class="code-line text-bold">.header-logo { … }</p>
-            <p class="code-line text-bold">.header-menu { … }</p>
-            <p class="code-line text-bold">.header-search { … }</p>
-            <p class="code-line text-bold">.header-login { … }</p>
-          </code></pre>
-            <ul class="content-list">
-              <li>
-                block 이름이나 element 이름이 길 경우 하이픈(-)으로 연결합니다.
-              </li>
-            </ul>
-            <pre><code class="content-code"
-            ><p class="code-line text-bold">.block-name-element-name</p>
-          </code></pre>
-            <h5 class="content-subhead-three text-bold">Modifiers</h5>
-            <ul class="content-list">
-              <li>Modifier는 block 또는 element의 속성입니다.</li>
-              <ul class="content-list-sub-list small">
-                <li>
-                  이 속성은 block 또는 element의 외관이나 상태를 변화시킵니다.
-                </li>
-                <li>Class명은 “–“를 추가하여 modifier를 추가하여야 합니다.</li>
-              </ul>
-            </ul>
-            <pre><code class="content-code"
-            ><p class="code-line text-bold">.block‐‐modifier { … }</p>
-            <p class="code-line text-bold">.block-element-modifier { … }</p>
-          </code></pre>
-            <ul class="content-list">
-              <li>
-                탭 메뉴가 다른 영역에서 다른 스타일로 사용된다면 메인 속성을
-                복사하여 추가하여야 합니다.
-              </li>
-            </ul>
-            <pre><code class="content-code"
-            ><p class="code-line text-bold">.header-navigation {</p>
-            <p class="code-line text-bold">&nbsp;&nbsp;background: #008cba;</p>
-            <p class="code-line text-bold">&nbsp;&nbsp;padding: 1px 0;</p>
-            <p class="code-line text-bold">&nbsp;&nbsp;margin: 2px 0;</p>
-            <p class="code-line text-bold">}</p>
-          </code></pre>
-            <ul class="content-list">
-              <li>class명이 길다면</li>
-              <ul class="content-list-sub-list small">
-                <li>
-                  BEM의 class명은 구체적이고 명료하여 HTML안에서도 읽기 쉬워야
-                  합니다.
-                </li>
-                <li>class명이 무엇을 나타내는지 분명하게 전달돼야 합니다.</li>
-              </ul>
-            </ul>
+            <iframe
+              class="content-pdf"
+              src="../assets/google_style_guide_ko.pdf"
+            ></iframe>
           </section>
 
           <hr class="horiz-divider" />
