feature/coding_std : provide pdf link of google style guide in mobile view

--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -275,12 +275,22 @@
                 <a
                   class="text-bold text-underline"
                   href="https://google.github.io/styleguide/htmlcssguide.html"
+                  target="”_blank”"
                   >Google HTML/CSS Style Guide</a
+                >
+              </li>
+              <li class="hidden-desktop">
+                번역본 pdf:
+                <a
+                  class="text-bold text-underline"
+                  href="../assets/google_style_guide_ko.pdf"
+                  target="”_blank”"
+                  >Google HTML/CSS Style Guide (한글)</a
                 >
               </li>
             </ul>
             <iframe
-              class="content-pdf"
+              class="content-pdf hidden-mobile"
               src="../assets/google_style_guide_ko.pdf"
             ></iframe>
           </section>
