feature/coding_std : google guide as mandatory standard & linking only one style sheet to respective view

--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -210,6 +210,9 @@
                 meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.
               </li>
               <li>
+                HTML 파일에는 각 view 당 하나의 style sheet link만 허용합니다.
+              </li>
+              <li>
                 사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
                 부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
                 불가능합니다.
@@ -238,37 +241,21 @@
           <!-- SECTION - CODING STANDARD -->
           <section class="content-section">
             <h3 class="content-subhead xlarge text-bold">Coding Standard</h3>
-            <h4 class="content-subhead-two large text-bold">HTML Norm</h4>
+            <p class="content-para">
+              모든 HTML & CSS 코드는 Google이 제공하는 style guide에 맞춰
+              작성해야 합니다. 아래 명시한 두 기준은 예외적으로 허용합니다.
+            </p>
             <ul class="content-list">
-              <li>
-                모든 HTML 파일은
-                <a
-                  class="text-underline text-bold"
-                  href="https://validator.w3.org/"
-                  >W3 Validator</a
-                >
-                을 통과해야 합니다.
-              </li>
-              <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
-            </ul>
-            <h4 class="content-subhead-two large text-bold">CSS Norm</h4>
-            <ul class="content-list">
-              <li>Block별로 CSS file을 만들어야 합니다.</li>
-              <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
-              <li>CSS file은 100줄을 넘지 않아야 합니다.</li>
+              <li>3.1.1 void element를 닫지 않아도 됩니다.</li>
+              <li>4.2.8 CSS에서 작은 따옴표, 큰 따옴표 모두 허용합니다.</li>
             </ul>
             <h4 class="content-subhead-two large text-bold">
               Google HTML/CSS Style Guide
             </h4>
             <ul class="content-list">
-              <li>Google이 제공해주는 style guide 입니다.</li>
               <li>
-                이 문서는 따로 명시 되어있지 않는 한 평가에 영향을 미치지
-                않습니다.
-              </li>
-              <li>
-                효율적이고 깔끔한 코드를 쓰고싶다면 최대한 이 문서에서 요구하는
-                사항들을 지키며 코드를 작성하세요.
+                효율적이고 깔끔한 코드 작성을 위해 Google이 제공해주는 style
+                guide입니다.
               </li>
               <li>
                 원문:
