--- a/pages/day02.html
+++ b/pages/day02.html
@@ -212,6 +212,9 @@
                 meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.
               </li>
               <li>
+                HTML 파일에는 각 view 당 하나의 style sheet link만 허용합니다.
+              </li>
+              <li>
                 사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
                 부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
                 불가능합니다.
