--- a/pages/day05.html
+++ b/pages/day05.html
@@ -179,7 +179,158 @@
       </header>
 
       <main class="layout-content">
-        <div class="content-frame"></div>
+        <div class="content-frame">
+          <h2 class="content-head xxxlarge text-bold">DAY05</h2>
+
+          <!-- SECTION - BASIC INSTRUCTION -->
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Basic Instructions</h3>
+            <ul class="content-list">
+              <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
+              <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
+              <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
+              <li>
+                제출하신 과제물은 동료들끼리 서로 확인하고 평가하게 됩니다.
+              </li>
+              <li>
+                Exercise는 난이도에 따라 쉬운 문제에서 어려운 문제 순으로 짜여
+                있습니다. 앞 단 계 문제의 과제물이 완벽하게 작동하지 않으면
+                난이도가 더 높은 문제는 아무리 잘 완료했다 하더라도 평가에
+                반영되지 않습니다.
+              </li>
+              <li>모든 프로젝트는 Chrome 브라우저 기반으로 평가됩니다.</li>
+              <li>
+                모든 HTML 파일은
+                <a
+                  class="text-underline text-bold"
+                  href="https://validator.w3.org/"
+                  >W3 Validator</a
+                >
+                을 통과해야 합니다.
+              </li>
+              <li>
+                meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.
+              </li>
+              <li>
+                HTML 파일에는 각 view 당 하나의 style sheet link만 허용합니다.
+              </li>
+              <li>
+                사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
+                부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
+                불가능합니다.
+              </li>
+              <li>어떠한 형태로든 JavaScript의 사용을 금지합니다.</li>
+              <li>페이지가 열리지 않으면 0점을 받게 됩니다.</li>
+              <li>
+                각 Exercise에서 정한 파일 이외의 어떠한 파일도 디렉토리에 남겨
+                두어서는 안 됩니다.
+              </li>
+              <li>
+                질문이 있으신가요? 오른쪽 동료에게 물어보세요. 아니면 왼쪽
+                동료에게 물어보세요.
+              </li>
+              <li>참고 가이드는 Google...그리고 Google 입니다.</li>
+              <li>
+                예시를 꼼꼼히 살펴보세요. Exercise에서 명시적으로 언급되지 않은
+                세부적인 사항에 대한 힌트를 얻을 수도 있습니다.
+              </li>
+              <li>다같이 한번 외쳐볼까요? "Chick to Chicken~"</li>
+            </ul>
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <!-- SECTION - FOREWORD -->
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Foreword</h3>
+            <p class="content-para">
+              여러분... 개포시장에 대박 맛있는 꽈배기를 팔고 있다는 거 아시나요?
+              따뜻하고 포실포실한 꽈배기를 한 입 베어먹으면 감동적인 맛이
+              난답니다. 기분이 너무 좋은 나머지 서브젝트를 만들다 말고 산책을
+              갔다 왔습니다. 클러스터 옥상에서 만난 옥상의 꽃이 참 아름답더군요.
+              아름다운 꽃 한송이 보고 힐링하고 가세요 @}——
+            </p>
+            <img
+              class="content-img img-margin"
+              src="../assets/day05/flower.png"
+              alt="innovation academy rooftop flower photo"
+            />
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <!-- SECTION - EX00 -->
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">
+              Exercise 00 : Perfectly responsive FTube
+            </h3>
+            <table class="content-table">
+              <thead class="content-table-thead text-bold">
+                <tr class="content-table-tr">
+                  <th colspan="3">Exercise 00</th>
+                </tr>
+              </thead>
+              <tbody class="content-table-tbody">
+                <tr class="content-table-tr content-table-ex-name">
+                  <td colspan="3" class="content-table-td-name">
+                    Perfectly responsive FTube
+                  </td>
+                </tr>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 디렉토리</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">ex00/</td>
+                </tr>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 파일</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">
+                    index.html, css/*.css, assets/(image files if necessary)
+                  </td>
+                </tr>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">허용 태그</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">제한 없음</td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content-list">
+              <li>
+                Day04에서 구현한 FTube mobile view를 기반으로 desktop view를
+                개발해 반응형 UI를 완성하세요.
+              </li>
+              <li>기존의 mobile view도 반응형으로 수정하세요.</li>
+              <li>
+                창의 너비가 768px 이하일 때는 mobile view, 768px 초과일 때는
+                desktop view를 반영합니다.
+              </li>
+              <li>
+                아래 영상과 같이 창의 크기가 변할 때 scale & view가 매끄럽게
+                변해야합니다.
+              </li>
+            </ul>
+
+            <h3 class="content-subhead large text-bold">Screenshots</h3>
+            <img
+              class="content-img"
+              src="../assets/day05/day05.png"
+              alt="FTubedesktop view screenshot"
+            />
+            <iframe
+              class="content-video-horiz"
+              src="../assets/day05/day05.mp4"
+            ></iframe>
+            <iframe
+              class="content-video-horiz"
+              src="../assets/day05/day05_1.mp4"
+            ></iframe>
+            <iframe
+              class="content-video-horiz"
+              src="../assets/day05/day05_2.mp4"
+            ></iframe>
+          </section>
+        </div>
       </main>
 
       <!-- SECTION - FOOTER -->
