feature/day05 : check day05 videos in mobile

--- a/pages/day05.html
+++ b/pages/day05.html
@@ -319,15 +319,15 @@
             />
             <iframe
               class="content-video-horiz"
-              src="../assets/day05/day05.mp4"
+              src="../assets/day05/video1.mp4"
             ></iframe>
             <iframe
               class="content-video-horiz"
-              src="../assets/day05/day05_1.mp4"
+              src="../assets/day05/video2.mp4"
             ></iframe>
             <iframe
               class="content-video-horiz"
-              src="../assets/day05/day05_2.mp4"
+              src="../assets/day05/video3.mp4"
             ></iframe>
           </section>
         </div>
