feature/video_frame : change iframe to video tag for portability

--- a/pages/day02.html
+++ b/pages/day02.html
@@ -431,10 +431,9 @@
               src="../assets/day02/ex02.png"
               alt="ex02 photo"
             />
-            <iframe
-              class="content-video"
-              src="../assets/day02/ex02.mp4"
-            ></iframe>
+            <video class="content-video" controls>
+              <source src="../assets/day02/ex02.mp4" type="video/mp4" />
+            </video>
           </section>
         </div>
       </main>
