--- a/pages/day03.html
+++ b/pages/day03.html
@@ -294,10 +294,9 @@
               </li>
               <li>다양한 animation을 적용해 영상과 같이 구현해보세요.</li>
             </ul>
-            <iframe
-              class="content-video-horiz"
-              src="../assets/day03/ex00.mp4"
-            ></iframe>
+            <video class="content-video-horiz" controls>
+              <source src="../assets/day03/ex00.mp4" type="video/mp4" />
+            </video>
           </section>
 
           <hr class="horiz-divider" />
@@ -343,10 +342,9 @@
               </li>
               <li>다양한 animation을 적용해 영상과 같이 구현해보세요.</li>
             </ul>
-            <iframe
-              class="content-video-horiz"
-              src="../assets/day03/ex01.mp4"
-            ></iframe>
+            <video class="content-video-horiz" controls>
+              <source src="../assets/day03/ex01.mp4" type="video/mp4" />
+            </video>
           </section>
 
           <hr class="horiz-divider" />
@@ -395,10 +393,9 @@
                 나타나게 하세요.
               </li>
             </ul>
-            <iframe
-              class="content-video-horiz"
-              src="../assets/day03/ex02.mp4"
-            ></iframe>
+            <video class="content-video-horiz" controls>
+              <source src="../assets/day03/ex02.mp4" type="video/mp4" />
+            </video>
           </section>
         </div>
       </main>
