--- a/pages/day04.html
+++ b/pages/day04.html
@@ -356,37 +356,33 @@
             <h3 class="content-subhead large text-bold">기능별 예시 영상</h3>
             <div class="content-flex">
               <div class="flex-frame">
-                <iframe
-                  class="frame-video"
-                  src="../assets/day04/video1.mp4"
-                ></iframe>
+                <video class="frame-video" controls>
+                  <source src="../assets/day04/video1.mp4" type="video/mp4" />
+                </video>
                 <figcaption class="frame-caption small">
                   밑에 화살표 누르면 영상 추가 로드
                 </figcaption>
               </div>
               <div class="flex-frame">
-                <iframe
-                  class="frame-video"
-                  src="../assets/day04/video2.mp4"
-                ></iframe>
+                <video class="frame-video" controls>
+                  <source src="../assets/day04/video2.mp4" type="video/mp4" />
+                </video>
                 <figcaption class="frame-caption small">
                   아이콘 클릭시 Subscribe 문구가 바뀜
                 </figcaption>
               </div>
               <div class="flex-frame">
-                <iframe
-                  class="frame-video"
-                  src="../assets/day04/video3.mp4"
-                ></iframe>
+                <video class="frame-video" controls>
+                  <source src="../assets/day04/video3.mp4" type="video/mp4" />
+                </video>
                 <figcaption class="frame-caption small">
                   헤더 우측 toggle 메뉴
                 </figcaption>
               </div>
               <div class="flex-frame">
-                <iframe
-                  class="frame-video"
-                  src="../assets/day04/video4.mp4"
-                ></iframe>
+                <video class="frame-video" controls>
+                  <source src="../assets/day04/video4.mp4" type="video/mp4" />
+                </video>
                 <figcaption class="frame-caption small">팝업</figcaption>
               </div>
             </div>
