--- a/pages/day05.html
+++ b/pages/day05.html
@@ -317,18 +317,15 @@
               src="../assets/day05/day05.png"
               alt="FTubedesktop view screenshot"
             />
-            <iframe
-              class="content-video-horiz"
-              src="../assets/day05/video1.mp4"
-            ></iframe>
-            <iframe
-              class="content-video-horiz"
-              src="../assets/day05/video2.mp4"
-            ></iframe>
-            <iframe
-              class="content-video-horiz"
-              src="../assets/day05/video3.mp4"
-            ></iframe>
+            <video class="content-video-horiz" controls>
+              <source src="../assets/day05/video1.mp4" type="video/mp4" />
+            </video>
+            <video class="content-video-horiz" controls>
+              <source src="../assets/day05/video2.mp4" type="video/mp4" />
+            </video>
+            <video class="content-video-horiz" controls>
+              <source src="../assets/day05/video3.mp4" type="video/mp4" />
+            </video>
           </section>
         </div>
       </main>
