feature/video_fix : fix day04 ex00 error

--- a/pages/day04.html
+++ b/pages/day04.html
@@ -294,7 +294,7 @@
               <li>영상의 썸네일과 제목을 따라할 필요는 없습니다.</li>
               <li>
                 영상 제목이 3줄을 넘어가려하면 ... 으로 이후 내용이 생략됩니다.
-                (하지만 HTML 코드에선 원본 제목으로 되어 있습니다)/li>
+                (하지만 HTML 코드에선 원본 제목으로 되어 있습니다)
               </li>
               <li>
                 헤더 우측 '<i class="material-icons">more_vert</i>' 을 누르면
