--- a/pages/day03.html
+++ b/pages/day03.html
@@ -214,6 +214,7 @@
               <li>
                 HTML 파일에는 각 view 당 하나의 style sheet link만 허용합니다.
               </li>
+              <li>id를 사용할 때는 확실한 이유가 있어야 합니다.</li>
               <li>
                 사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
                 부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
@@ -268,7 +269,9 @@
               </thead>
               <tbody class="content-table-tbody">
                 <tr class="content-table-tr content-table-ex-name">
-                  <td colspan="3" class="content-table-td-name">FTube</td>
+                  <td colspan="3" class="content-table-td-name">
+                    The Chaotic Boxes 🤪
+                  </td>
                 </tr>
                 <tr class="content-table-tr">
                   <td class="content-table-td">제출 디렉토리</td>
