--- a/pages/day05.html
+++ b/pages/day05.html
@@ -214,6 +214,7 @@
               <li>
                 HTML 파일에는 각 view 당 하나의 style sheet link만 허용합니다.
               </li>
+              <li>id를 사용할 때는 확실한 이유가 있어야 합니다.</li>
               <li>
                 사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
                 부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
@@ -302,8 +303,9 @@
               </li>
               <li>기존의 mobile view도 반응형으로 수정하세요.</li>
               <li>
-                창의 너비가 768px 이하일 때는 mobile view, 768px 초과일 때는
-                desktop view를 반영합니다.
+                창의 너비가 768px(Galaxy Fold / ipad portrait viewport 너비)
+                이하일 때는 mobile view, 768px 초과일 때는 desktop view를
+                반영합니다.
               </li>
               <li>
                 아래 영상과 같이 창의 크기가 변할 때 scale & view가 매끄럽게
