--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -212,6 +212,7 @@
               <li>
                 HTML 파일에는 각 view 당 하나의 style sheet link만 허용합니다.
               </li>
+              <li>id를 사용할 때는 확실한 이유가 있어야 합니다.</li>
               <li>
                 사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
                 부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
@@ -248,6 +249,10 @@
             <ul class="content-list">
               <li>3.1.1 void element를 닫지 않아도 됩니다.</li>
               <li>4.2.8 CSS에서 작은 따옴표, 큰 따옴표 모두 허용합니다.</li>
+              <li>
+                4.1.1 W3 CSS Validator는 평가에
+                <span class="text-bold">적용되지 않습니다.</span>
+              </li>
             </ul>
             <h4 class="content-subhead-two large text-bold">
               Google HTML/CSS Style Guide
