--- a/pages/rush.html
+++ b/pages/rush.html
@@ -214,6 +214,7 @@
               <li>
                 HTML 파일에는 각 view 당 하나의 style sheet link만 허용합니다.
               </li>
+              <li>id를 사용할 때는 확실한 이유가 있어야 합니다.</li>
               <li>
                 사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
                 부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
@@ -246,8 +247,9 @@
             <p class="content-para">
               개포동의 가을은 아름답죠. 맛있게 점심을 먹은 후 클러스터 옆에 있는
               개포근린공원을 산책해보세요. 초록초록한 나무를 보며 블루 라이트에
-              지친 눈에게 휴식을 선사하세요. 굳은 어깨도 스트레칭으로
-              풀어주세요. 건강은 소중하니까요.
+              지친 눈에게, 양재천의 물흐르는 소리를 들으며 키보드 소리에 지친
+              귀에 휴식을 선사하세요. 굳은 어깨도 스트레칭으로 풀어주세요.
+              건강은 소중하니까요.
             </p>
             <img
               class="content-img img-margin"
@@ -268,7 +270,11 @@
                 DM을 보내든, 비둘기를 보내든, 텔레파시를 사용해서라도 연락을
                 취하세요. Life isn’t always fair, that’s just the way it is.
               </li>
-              <li>Rush에서도 동일한 Coding Standard가 적용됩니다.</li>
+              <li>
+                Rush에서도
+                <span class="text-bold">동일한 Coding Standard</span>가
+                적용됩니다.
+              </li>
               <li>Subject에서 요구하는 사항만(!) 구현하세요.</li>
             </ul>
           </section>
@@ -390,6 +396,10 @@
               <li>hover/click 시 변화가 있다면 전부 구현하세요.</li>
               <li>당연히 반응형이어야겠죠?</li>
             </ul>
+            <p class="content-tip">
+              <i class="material-icons-outlined">lightbulb</i>component별로
+              분업한다면 도움이 될지도 모릅니다.
+            </p>
           </section>
         </div>
       </main>
