--- a/pages/day04.html
+++ b/pages/day04.html
@@ -214,6 +214,7 @@
               <li>
                 HTML 파일에는 각 view 당 하나의 style sheet link만 허용합니다.
               </li>
+              <li>id를 사용할 때는 확실한 이유가 있어야 합니다.</li>
               <li>
                 사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
                 부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
@@ -325,7 +326,7 @@
             </ul>
             <p class="content-tip">
               <i class="material-icons-outlined">lightbulb</i>CSS의 -webkit-,
-              -moz-, -ms-, -o- 같은 접두어는 무엇을 의미할까요?
+              -moz-, -ms-, -o- 같은 접두사는 무엇을 의미할까요?
             </p>
 
             <h3 class="content-subhead large text-bold">Screenshots</h3>
